@@ -28,6 +28,7 @@ protected:
 private:
 	void initFormats(desktop::settings::Settings &settings, QFormLayout *form);
 	void initAutosave(desktop::settings::Settings &settings, QFormLayout *form);
+	void initDialogs(desktop::settings::Settings &settings, QFormLayout *form);
 };
 
 }
